--- a/CinesSabadell.ipynb
+++ b/CinesSabadell.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,36 +19,29 @@
      "output_type": "stream",
      "text": [
       "A la cartellera hi ha...:\n",
+      "http://www.google.es/search?q=animales%20fant%C3%A1sticos%3A%20los%20cr%C3%ADmenes%20de%20grindelwald%20site%3Aimdb.com\n",
       "http://www.google.es/search?q=bohemian%20rhapsody%20site%3Aimdb.com\n",
       "http://www.google.es/search?q=el%20cascanueces%20y%20los%20cuatro%20reinos%20site%3Aimdb.com\n",
+      "http://www.google.es/search?q=el%20desentierro%20site%3Aimdb.com\n",
       "http://www.google.es/search?q=el%20fot%C3%B3grafo%20de%20mauthausen%20site%3Aimdb.com\n",
-      "http://www.google.es/search?q=hunter%20killer%20site%3Aimdb.com\n",
-      "http://www.google.es/search?q=infiltrado%20en%20el%20kkklan%20site%3Aimdb.com\n",
       "http://www.google.es/search?q=la%20noche%20de%20halloween%20site%3Aimdb.com\n",
+      "http://www.google.es/search?q=malos%20tiempos%20en%20el%20royale%20site%3Aimdb.com\n",
+      "http://www.google.es/search?q=millennium%3A%20lo%20que%20no%20te%20mata%20te%20hace%20m%C3%A1s%20fuerte%20site%3Aimdb.com\n",
       "http://www.google.es/search?q=overlord%20site%3Aimdb.com\n",
       "http://www.google.es/search?q=pesadilla%202%3A%20noche%20de%20%20halloween%20site%3Aimdb.com\n",
       "http://www.google.es/search?q=smallfoot%20site%3Aimdb.com\n",
-      "http://www.google.es/search?q=tu%20hijo%20site%3Aimdb.com\n",
-      "http://www.google.es/search?q=venom%20site%3Aimdb.com\n",
-      "http://www.google.es/search?q=vose%20millennium%3A%20lo%20que%20no%20te%20mata%20te%20hace%20m%C3%A1s...%20site%3Aimdb.com\n",
-      "http://www.google.es/search?q=animales%20fant%C3%A1sticos%3A%20los%20cr%C3%ADmenes%20de%20grindelwald%20site%3Aimdb.com\n",
-      "http://www.google.es/search?q=el%20desentierro%20site%3Aimdb.com\n",
-      "http://www.google.es/search?q=malos%20tiempos%20en%20el%20royale%20site%3Aimdb.com\n",
-      "http://www.google.es/search?q=millennium%3A%20lo%20que%20no%20te%20mata%20te%20hace%20m%C3%A1s%20fuerte%20site%3Aimdb.com\n",
       "http://www.google.es/search?q=vose%20animales%20fant%C3%A1sticos%3A%20los%20cr%C3%ADmenes%20de....%20site%3Aimdb.com\n",
-      "Seleccionades...:\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'x-ratelimit-remaining'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-b57365747e52>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[0mparameters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"include_adult\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"page\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"region\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"ES\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"query\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpeli\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"nom\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"language\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\"es-ES\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"api_key\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\"ad38c5a701d46fed6b0ebc7c3d25dd49\"\u001b[0m  \u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheaders\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"x-ratelimit-remaining\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"results\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda2/envs/py36/lib/python3.6/site-packages/requests/structures.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_store\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__delitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'x-ratelimit-remaining'"
+      "Seleccionades...:\n",
+      "2018-11-16 - ANIMALES FANTÁSTICOS: LOS CRÍMENES DE GRINDELWALD(7 AÑOS) ['16:00', '19:00', '20:15', '22:00']*** 7.3\n",
+      "2018-10-31 - BOHEMIAN RHAPSODY(12 AÑOS) ['16:00', '19:00', '22:00']*** 8.3\n",
+      "2018-11-16 - EL DESENTIERRO(16 AÑOS) ['16:00', '18:15', '20:30', '22:45']*** 0\n",
+      "2018-10-26 - EL FOTÓGRAFO DE MAUTHAUSEN(16 AÑOS) ['16:00', '18:15', '20:30', '22:45']*** 6.2\n",
+      "2018-10-26 - LA NOCHE DE HALLOWEEN(16 AÑOS) ['20:15', '22:30']*** 6.5\n",
+      "2018-11-16 - MALOS TIEMPOS EN EL ROYALE(16 AÑOS) ['16:00', '19:00', '22:00']*** 6.6\n",
+      "2018-10-26 - MILLENNIUM: LO QUE NO TE MATA TE HACE MÁS FUERTE(12 AÑOS) ['16:00', '18:15', '20:30', '22:45']*** 5.8\n",
+      "2018-10-10 - OVERLORD(18 AÑOS) ['20:15', '22:30']*** 6.8\n",
+      "Clika!\n",
+      "He acabat!\n"
      ]
     }
    ],
@@ -123,7 +116,7 @@
     "    wait = WebDriverWait(navegador, 5)\n",
     "    wait.until(EC.presence_of_element_located((By.ID, \"player\")))\n",
     "    navegador.find_element_by_class_name(\"ytp-large-play-button ytp-button\").click()\n",
-    "except:\n",
+    "except (TimeOutException):\n",
     "    print(\"Clika!\")\n",
     "\n",
     "\n",
