--- a/MapesPoblacio.ipynb
+++ b/MapesPoblacio.ipynb
@@ -7,23 +7,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              Edat D     Edat H  Total D  Total H Districte  Total\n",
-      "Districte                                                         \n",
-      "1          55.537736  54.000000    27762    25050         1  52812\n",
-      "2          54.509804  54.000000    12561    11719         2  24280\n",
-      "3          55.000000  54.568627    17661    17081         3  34742\n",
-      "4          54.539216  52.500000    19627    18918         4  38545\n",
-      "5          54.069307  52.551020     9958     9590         5  19548\n",
-      "6          54.500000  54.049505    14803    14366         6  29169\n",
-      "7          53.030303  50.500000     4312     4394         7   8706\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Edat D</th>\n",
+       "      <th>Edat H</th>\n",
+       "      <th>Total D</th>\n",
+       "      <th>Total H</th>\n",
+       "      <th>Districte</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Districte</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>55.537736</td>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>27762</td>\n",
+       "      <td>25050</td>\n",
+       "      <td>1</td>\n",
+       "      <td>52812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>54.509804</td>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>12561</td>\n",
+       "      <td>11719</td>\n",
+       "      <td>2</td>\n",
+       "      <td>24280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>54.568627</td>\n",
+       "      <td>17661</td>\n",
+       "      <td>17081</td>\n",
+       "      <td>3</td>\n",
+       "      <td>34742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>54.539216</td>\n",
+       "      <td>52.500000</td>\n",
+       "      <td>19627</td>\n",
+       "      <td>18918</td>\n",
+       "      <td>4</td>\n",
+       "      <td>38545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>54.069307</td>\n",
+       "      <td>52.551020</td>\n",
+       "      <td>9958</td>\n",
+       "      <td>9590</td>\n",
+       "      <td>5</td>\n",
+       "      <td>19548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>54.500000</td>\n",
+       "      <td>54.049505</td>\n",
+       "      <td>14803</td>\n",
+       "      <td>14366</td>\n",
+       "      <td>6</td>\n",
+       "      <td>29169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>53.030303</td>\n",
+       "      <td>50.500000</td>\n",
+       "      <td>4312</td>\n",
+       "      <td>4394</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8706</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Edat D     Edat H  Total D  Total H Districte  Total\n",
+       "Districte                                                         \n",
+       "1          55.537736  54.000000    27762    25050         1  52812\n",
+       "2          54.509804  54.000000    12561    11719         2  24280\n",
+       "3          55.000000  54.568627    17661    17081         3  34742\n",
+       "4          54.539216  52.500000    19627    18918         4  38545\n",
+       "5          54.069307  52.551020     9958     9590         5  19548\n",
+       "6          54.500000  54.049505    14803    14366         6  29169\n",
+       "7          53.030303  50.500000     4312     4394         7   8706"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -59,7 +166,7 @@
     "\n",
     "\n",
     "map1.save('DadesSabadell/mapa.html')\n",
-    "print(tot_df)"
+    "tot_df"
    ]
   },
   {
