--- a/opendatasabadell.ipynb
+++ b/opendatasabadell.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dades Obertes de Sabadell\n",
+    "\n",
+    "\n",
+    "http://opendata.sabadell.cat/ca/\n",
+    "\n",
+    "Accedim a les dades sobre Medi Ambient i ens trobem amb un fitxer sobre residus i ens el descarreguem.\n",
+    "podeu veure el fitxer descarregat [en aquí](residus.csv)\n",
+    "\n",
+    "Es tracta d'un fitxer CSV que vol dir Comma Separated Value, és a dir un fitxer que conté dades separades per comes. Es tracta doncs d'un fitxer tipus taula, on les files signifiquen registres i les columnes diferentes caractarístiques o camps dels registres.\n",
+    "\n",
+    "Podeu veure el fitxer en format de taula usant l'aplicació de l'ajuntament de dades obertes en el següent link:\n",
+    "[OpenData Sabadell](http://opendata.sabadell.cat/ca/inici/odata?iddist=1462). En aquest cas veiem que cada registre representa la quantitat de residus en tones d'un tipus per a un any determinat que hi hagut a Sabadell.\n",
+    "\n",
+    "El que farem a continuació amb python és llegir aquest fitxer i crear una visualització intercativa. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -19,9 +39,9 @@
     "\n",
     "df=pd.read_csv(\"residus.csv\",sep=\";\")\n",
     "df.sort_values(by=\"Anyo\",inplace= True)\n",
-    "pd.pivot_table(df,columns=\"Anyo\", index = \"NomMaterial\", values=\"Quantitat\")\n",
     "materials = list(df.NomMaterial.unique())\n",
-    "materials.remove(\"Resta\")\n"
+    "materials.remove(\"Resta\")\n",
+    "pd.pivot_table(df,columns=\"Anyo\", index = \"NomMaterial\", values=\"Quantitat\")\n"
    ]
   },
   {
