--- a/CinesSabadell.ipynb
+++ b/CinesSabadell.ipynb
@@ -1,13 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Scrapping de dades d'internet\n",
+    "\n",
+    "Finalment veurem com fer scrapping de dades de pàgines web. Fer scrapping vol dir agafar informació directament de les pàgines web, sense passar per un fitxer de dades ni per un API. En aquest cas el que fem és obrir una pàgina web i amb l'ajuda de python el que fem és buscar les dades que necessitem en el document HTML que ens envia el servidor web. \n",
+    "Fer scrapping no és senzill i hi ha certes pàgines web que no deixen que es pugui fer, intenten posar-vos-ho difícil. \n",
+    "\n",
+    "En el nostre cas anirem a la web dels cinemes eix macià de sabadell i consultarem la cartellera per avui. Buscarem les pelis que comencen a l'hora que ens interessa (amb 1.30h de marge!) i mirarem que sigui apte per la nostra edat. De les pel·lícules seleccionades obrirem el trailer de la peli que millor valorada estigui en la base de dades que hem usat abans (l'api ens donarà més informació que la de la pàgina del cinema!!!)\n",
+    "\n",
+    "Per fer això el que farem serà controlar de forma automàtica un nou navegador que s'obrirà sol i farà les accions necessàries. Mireu ben bé com es va movent el nou navegador de forma autònoma i gaudiu del trailer!\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -57,12 +65,12 @@
     "import time\n",
     "\n",
     "\n",
-    "edat = 40\n",
-    "hora = \"21:30\"\n",
+    "edat = 15\n",
+    "hora = \"19:30\"\n",
     "\n",
     "\n",
     "cinema = 'http://www.cinemeseixmacia.com/' #Poseu el nom de la pàgina web\n",
-    "navegador = webdriver.Chrome(\"/Users/eloi/chromedriver\") #Obrir un navegador Chrome\n",
+    "navegador = webdriver.Chrome(\"chromedriver.exe\") #Obrir un navegador Chrome\n",
     "#navegador.implicitly_wait(10)\n",
     "navegador.get(cinema)\n",
     "\n",
