--- a/Events Agenda.ipynb
+++ b/Events Agenda.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Agenda de Sabadell plasmada en un mapa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En el portal de dades obertes de Sabadell també podem trobar l'agenda d'esdeveniments de la ciutat organitzats per diferents temàtiques (ciència i tecnologia, art, música, festes, etc.) i ens els podem descarregar fàcilment des [d'aquí.](http://opendata.sabadell.cat/ca/inici/fitxes-cataleg?option=com_iasmetadadesarticles&cod=OD,CT-03-&title=Cultura%20i%20oci)    \n",
+    "En el nostre cas ens hem baixat les corresponents a ciència i tecnologia, art i música i intentarem representar en un mapa aquells esdeveniments en que s'indiqui el punt geogràfic en que han tingut i tindran lloc (longitut i latitud). Si voleum podeu fer un cop d'ull a l'aspecte que tenen aquests arxius a la carpeta DadesSabadell.\n",
+    "  \n",
+    "Del següent codi podrem modificar-ne la data (**data = \"1/12/2018 18:00\"**) i representar només els esdeveniments a partir de la data seleccionada.  \n",
+    "\n",
+    "També podeu intentar modificar la següent línia de codi perquè només apareguin els esdeveniments d'un tipus i/o canviar-ne l'aparença de l'indicador en el mapa:  \n",
+    "\n",
+    "**for type,color in [(musica,'blue'),(art,'red'),(ciencia,'green')]:**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -79,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
