--- a/MapesPoblacio.ipynb
+++ b/MapesPoblacio.ipynb
@@ -3,7 +3,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Mapes de la Població a partir del padró"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A partir de les dades del padró (població de cada districte per sexe i any de naixement) que formen part de les dades obertes proporcionades per l'Ajuntament i que podem trovar [aquí](http://opendata.sabadell.cat/ca/?option=com_content&view=article&id=4729&Itemid=209), però que ja ens hem baixat prèviament i anomenem com:   \n",
+    "  \n",
+    "**PadroDistricteSexeAnyNaixement2015.csv**    \n",
+    "  \n",
+    "Les següents línies ens permeten agafar les dades presents en el padró i agruparles de la obtenint per cada districte: la mitja d'edat dels homes, la mitja d'edat de les dones, el total d'homes, el total de dones i la població total.  \n",
+    "  \n",
+    "Podem veure la transformació de les dades en la taula que apareix al final del codi que hi ha a continuació:"
+   ]
   },
   {
    "cell_type": "code",
@@ -153,6 +168,26 @@
     "tot_df.columns=[' '.join(col).strip() for col in tot_df.columns.values]\n",
     "tot_df['Total'] = tot_df['Total H'] + tot_df['Total D']\n",
     "\n",
+    "tot_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuació agafem les dades per plasmar-les en un mapa. El mateix portal de dades obertes ens dóna informació geogràfica de cada districte (\"districtes.geojson\") els que ens permet dibuixar-ne el contorn i representar a través de diferents intensitats de color les dades numèriques.  \n",
+    "  \n",
+    "Podeu provar de canviar la linia on apareix **'Total'** per qualsevol nom de les columnes de la taula anterior per canviar les representacions del mapa (**'Edat D'**,**'Edat H'**,**'Total D'**,**'Total H'**).  \n",
+    "  \n",
+    "També podeu intentar canviar els colors de la gràfica substituïnt el valor **'YlOrRd'** per **'BuPu'**, **'GnBu'**, **'OrRd'**, **'PuBu'**, **''PuBuGn'**, **'PuRd'**, **'RdPu'**, **'YlGn'** o **'YlGnBu'**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "district_geo = 'DadesSabadell/districtes.geojson'\n",
     "\n",
     "map1 = folium.Map(location=[41.54329, 2.10942],zoom_start=13)\n",
@@ -165,14 +200,15 @@
     "              legend_name = 'Població per districte')\n",
     "\n",
     "\n",
-    "map1.save('DadesSabadell/mapa.html')\n",
-    "tot_df"
+    "map1.save('DadesSabadell/mapa.html')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Finalment podeu veure la vostra creació en el següent link:  \n",
+    "\n",
     "[Prem aquí i consulta el Mapa Generat... ](DadesSabadell/mapa.html)"
    ]
   }
@@ -186,14 +222,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
