--- a/CinesSabadell.ipynb
+++ b/CinesSabadell.ipynb
@@ -124,7 +124,7 @@
     "    wait = WebDriverWait(navegador, 5)\n",
     "    wait.until(EC.presence_of_element_located((By.ID, \"player\")))\n",
     "    navegador.find_element_by_class_name(\"ytp-large-play-button ytp-button\").click()\n",
-    "except (TimeOutException):\n",
+    "except:\n",
     "    print(\"Clika!\")\n",
     "\n",
     "\n",
