Youtube click is working now

--- a/CinesSabadell.ipynb
+++ b/CinesSabadell.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -40,15 +40,17 @@
       "http://www.google.es/search?q=smallfoot%20site%3Aimdb.com\n",
       "http://www.google.es/search?q=vose%20animales%20fant%C3%A1sticos%3A%20los%20cr%C3%ADmenes%20de....%20site%3Aimdb.com\n",
       "Seleccionades...:\n",
-      "2018-11-16 - ANIMALES FANTÁSTICOS: LOS CRÍMENES DE GRINDELWALD(7 AÑOS) ['16:00', '19:00', '20:15', '22:00']*** 7.3\n",
+      "2018-11-16 - ANIMALES FANTÁSTICOS: LOS CRÍMENES DE GRINDELWALD(7 AÑOS) ['16:00', '19:00', '20:15', '22:00']*** 7.4\n",
       "2018-10-31 - BOHEMIAN RHAPSODY(12 AÑOS) ['16:00', '19:00', '22:00']*** 8.3\n",
+      "2018-10-26 - EL CASCANUECES Y LOS CUATRO REINOS(APTA) ['16:00', '18:00']*** 6.4\n",
       "2018-11-16 - EL DESENTIERRO(16 AÑOS) ['16:00', '18:15', '20:30', '22:45']*** 0\n",
       "2018-10-26 - EL FOTÓGRAFO DE MAUTHAUSEN(16 AÑOS) ['16:00', '18:15', '20:30', '22:45']*** 6.2\n",
-      "2018-10-26 - LA NOCHE DE HALLOWEEN(16 AÑOS) ['20:15', '22:30']*** 6.5\n",
       "2018-11-16 - MALOS TIEMPOS EN EL ROYALE(16 AÑOS) ['16:00', '19:00', '22:00']*** 6.6\n",
       "2018-10-26 - MILLENNIUM: LO QUE NO TE MATA TE HACE MÁS FUERTE(12 AÑOS) ['16:00', '18:15', '20:30', '22:45']*** 5.8\n",
-      "2018-10-10 - OVERLORD(18 AÑOS) ['20:15', '22:30']*** 6.8\n",
-      "Clika!\n",
+      "2018-10-26 - PESADILLA 2: NOCHE DE  HALLOWEEN(16 AÑOS) ['16:00', '18:00']*** 5.8\n",
+      "2018-10-11 - SMALLFOOT(APTA) ['16:00', '18:00']*** 6.5\n",
+      "Clicka!\n",
+      "https://www.youtube.com/embed/UiOYxLrKYYc?autoplay=1\n",
       "He acabat!\n"
      ]
     }
@@ -59,18 +61,20 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.common.exceptions import TimeoutException\n",
+    "\n",
     "import requests \n",
     "import datetime\n",
     "import urllib\n",
     "import time\n",
     "\n",
     "\n",
-    "edat = 15\n",
-    "hora = \"19:30\"\n",
+    "edat = 18\n",
+    "hora = \"18:00\"\n",
     "\n",
     "\n",
     "cinema = 'http://www.cinemeseixmacia.com/' #Poseu el nom de la pàgina web\n",
-    "navegador = webdriver.Chrome(\"chromedriver.exe\") #Obrir un navegador Chrome\n",
+    "navegador = webdriver.Chrome(\"/Users/eloi/chromedriver\") #Obrir un navegador Chrome\n",
     "#navegador.implicitly_wait(10)\n",
     "navegador.get(cinema)\n",
     "\n",
@@ -115,20 +119,13 @@
     "\n",
     "ordenada = sorted(pelis_seleccionades, key=lambda k: k['puntuacio'], reverse=True)\n",
     "ActionChains(navegador).move_to_element(ordenada[0][\"trailer\"]).perform()\n",
-    "time.sleep(3)\n",
+    "time.sleep(5)\n",
     "navegador.execute_script(\"arguments[0].click();\", ordenada[0][\"trailer\"])\n",
-    "time.sleep(3)\n",
-    "wait = WebDriverWait(navegador, 5)\n",
-    "wait.until(EC.frame_to_be_available_and_switch_to_it((By.TAG_NAME, 'iframe')))\n",
-    "try:\n",
-    "    wait = WebDriverWait(navegador, 5)\n",
-    "    wait.until(EC.presence_of_element_located((By.ID, \"player\")))\n",
-    "    navegador.find_element_by_class_name(\"ytp-large-play-button ytp-button\").click()\n",
-    "except:\n",
-    "    print(\"Clika!\")\n",
-    "\n",
-    "\n",
-    "\n",
+    "elm = navegador.find_element_by_xpath('//iframe[starts-with(@src, \"https://www.youtube.com/embed\")]')\n",
+    "urlStr = elm.get_attribute(\"src\");\n",
+    "elm.click()\n",
+    "print(\"Clicka!\")\n",
+    "print(urlStr)\n",
     "print(\"He acabat!\")\n",
     "\n"
    ]
