--- a/CinesSabadell.ipynb
+++ b/CinesSabadell.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "\n",
     "cinema = 'http://www.cinemeseixmacia.com/' #Poseu el nom de la pàgina web\n",
-    "navegador = webdriver.Chrome(\"chromedriver.exe") #Obrir un navegador Chrome\n",
+    "navegador = webdriver.Chrome(\"chromedriver.exe\") #Obrir un navegador Chrome\n",
     "#navegador.implicitly_wait(10)\n",
     "navegador.get(cinema)\n",
     "\n",
